--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
-    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"></link>
+
     <link rel="stylesheet" type="text/css" href="comonn.css" />
   </head>
   <body>
     <select class="breed-select js-breed-select"></select>
-    <p class="loader js-loader">Loading data, please wait...</p>
-    <p class="error js-error">Oops! Something went wrong! Try reloading the page!</p>
+    <p class="loader js-loader"></p>
+    <p class="error js-error">
+      Oops! Something went wrong! Try reloading the page!
+    </p>
     <div class="cat-info js-cat-info"></div>
     <!-- <script src="./partials/cat.api.js" type="module"></script> -->
     <script src="index.js" type="module"></script>
-    <script src="https://unpkg.com/slim-select@latest/dist/slimselect.min.js"></script>
-
   </body>
 </html>
